src/styles/main/_generics.scss
@use "@nationalarchives/frontend/nationalarchives/variables/borders" as
  borderVars;

@use "@nationalarchives/frontend/nationalarchives/tools/a11y";
@use "@nationalarchives/frontend/nationalarchives/tools/borders";
@use "@nationalarchives/frontend/nationalarchives/tools/colour";
@use "@nationalarchives/frontend/nationalarchives/tools/media";
@use "@nationalarchives/frontend/nationalarchives/tools/spacing";
@use "@nationalarchives/frontend/nationalarchives/tools/typography";

.etna-space-above {
  @include spacing.space-above;
}

.etna-thick-keyline-accent-left {
  @include colour.thick-keyline-accent(left);
  border-top-right-radius: borderVars.$rounded-border-radius;
  border-bottom-right-radius: borderVars.$rounded-border-radius;
}

abbr {
  cursor: help;
}

.etna-cta {
  @include spacing.space-above;

  @include colour.thick-keyline-accent(left);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;

  @include media.on-mobile {
    .tna-button-group {
      margin-top: spacing.space(1);
    }
  }
}

.etna-inset {
  @include spacing.space-above;

  @include colour.thick-keyline(left);
  padding: spacing.space(0.5) 0 spacing.space(0.5) spacing.space(1);
}

.etna-audio {
  width: 100%;
  @include spacing.space-above;

  display: block;
}

.etna-etc-search .tna-form-item__hint {
  margin-top: spacing.space(0.25);
  margin-bottom: spacing.space(0.5);

  @include colour.colour-font("font-base");
  @include typography.font-size(18);

  @include media.on-mobile {
    @include typography.font-size(17);
  }
}

.etna-email {
  display: inline-flex;
  flex-wrap: wrap;
  align-items: baseline;
  gap: spacing.space(0.75);

  overflow-wrap: anywhere;
}

#page-body {
  > :first-child {
    margin-top: spacing.space(3);
  }

  > [class^="tna-heading-"]:first-child,
  > [class*=" tna-heading-"]:first-child,
  > .tna-section:first-child {
    margin-top: 0;
  }
}

.tna-background-accent,
.tna-background-accent-light {
  + .tna-background-accent,
  + .tna-background-accent-light {
    .tna-template--dark-theme & {
      @include colour.colour-border("keyline", 1px, dotted, top);
    }

    .tna-template--system-theme & {
      @media (prefers-color-scheme: dark) {
        @include colour.colour-border("keyline", 1px, dotted, top);
      }
    }
  }
}

.etna-background-accent-light-half {
  position: relative;

  &::before {
    content: "";

    height: 50%;

    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    z-index: -1;

    @include colour.accent-light;
  }
}

:first-child[hidden] {
  + .tna-hgroup-xl,
  + .tna-hgroup-l,
  + .tna-hgroup-m,
  + .tna-hgroup-s,
  + .tna-heading-s,
  + .tna-heading-m,
  + .tna-heading-l,
  + .tna-heading-xl {
    margin-top: 0;
    padding-top: 0;
  }
}

// .tna-filters {
//   margin-block: 10rem;

//   &__item {
//     position: relative;
//   }

//   &__button {
//     width: 100%;
//     margin: 0;
//     padding: 0;

//     display: flex;
//     justify-content: space-between;

//     font-size: inherit;
//     line-height: inherit;
//     text-align: left;

//     background: none;

//     border: none;

//     cursor: pointer;

//     @include borders.rounded-border;

//     > span {
//       flex: 1;
//     }

//     small {
//       width: 4rem;

//       text-align: right;
//       text-decoration: underline;
//       @include typography.interactable-text-decoration;
//       @include colour.colour-font("link");
//     }

//     &-text {
//     }

//     &:hover &-text {
//       @include typography.interacted-text-decoration;
//     }

//     &[aria-expanded="true"] {
//       position: absolute;

//       > span {
//         color: transparent;
//       }
//     }
//   }

//   &__content {
//     padding-right: 4rem;
//   }
// }

